docs/api/qiskit/0.43/qiskit.opflow.gradients.Gradient.mdx
---
title: Gradient
description: API reference for qiskit.opflow.gradients.Gradient
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.gradients.Gradient
---

# Gradient

<Class id="qiskit.opflow.gradients.Gradient" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/gradients/gradient.py" signature="Gradient(grad_method='param_shift', **kwargs)">
  Bases: [`GradientBase`](qiskit.opflow.gradients.GradientBase "qiskit.opflow.gradients.gradient_base.GradientBase")

  Deprecated: Convert an operator expression to the first-order gradient.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.gradients.gradient.Gradient` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  ## Methods Defined Here

  <span id="qiskit-opflow-gradients-gradient-convert" />

  ### convert

  <Function id="qiskit.opflow.gradients.Gradient.convert" name="convert" signature="Gradient.convert(operator, params=None)">
    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The operator we are taking the gradient of.
    *   **params** ([*ParameterVector*](qiskit.circuit.ParameterVector "qiskit.circuit.parametervector.ParameterVector")  *|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression") *| List\[*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")*] | None*) – The parameters we are taking the gradient with respect to. If not explicitly passed, they are inferred from the operator and sorted by name.

    **Returns**

    An operator whose evaluation yields the Gradient.

    **Raises**

    *   **ValueError** – If `params` contains a parameter not present in `operator`.
    *   **ValueError** – If `operator` is not parameterized.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-gradients-gradient-get-gradient" />

  ### get\_gradient

  <Function id="qiskit.opflow.gradients.Gradient.get_gradient" name="get_gradient" signature="Gradient.get_gradient(operator, params)">
    Get the gradient for the given operator w\.r.t. the given parameters

    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – Operator w\.r.t. which we take the gradient.
    *   **params** ([*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")  *|*[*ParameterVector*](qiskit.circuit.ParameterVector "qiskit.circuit.parametervector.ParameterVector") *| List\[*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")*]*) – Parameters w\.r.t. which we compute the gradient.

    **Returns**

    Operator which represents the gradient w\.r.t. the given params.

    **Raises**

    *   **ValueError** – If `params` contains a parameter not present in `operator`.
    *   [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – If the coefficient of the operator could not be reduced to 1.
    *   [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – If the differentiation of a combo\_fn requires JAX but the package is not installed.
    *   **TypeError** – If the operator does not include a StateFn given by a quantum circuit
    *   **Exception** – Unintended code is reached
    *   **MissingOptionalLibraryError** – jax not installed

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  ## Attributes

  ### grad\_method

  <Attribute id="qiskit.opflow.gradients.Gradient.grad_method" name="grad_method">
    Returns `CircuitGradient`.

    **Returns**

    `CircuitGradient`.
  </Attribute>
</Class>

